[package]
name = "disjoint-sets"
version = "0.4.0-pre"
authors = ["Jesse A. Tov <jesse.tov@gmail.com>"]
description = "Three union-find implementations"
repository = "https://github.com/tov/disjoint-sets-rs"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["union-find", "Tarjan"]
categories = ["data-structures"]
