[package]
name = "disjoint-sets"
version = "0.4.3-alpha.0"
authors = ["Jesse A. Tov <jesse.tov@gmail.com>"]
description = "Three union-find implementations"
repository = "https://github.com/tov/disjoint-sets-rs"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["union-find", "Tarjan"]
categories = ["data-structures"]

[badges]
travis-ci = { repository = "tov/disjoint-sets-rs" }

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
quickcheck = "0.6"

[package.metadata.docs.rs]
features = ["serde"]

